Bug 1845208 - Make `HTMLEditor::SplitAncestorStyledInlineElementsAtRangeEdges` abort if splitting points are lost r=m_kato

Due to the `DOMNodeRemoved` event listener, splitting at range boundaries
may fail tracking the DOM tree due to unexpected container lost.  In the
cases, the method should abort its task.

Differential Revision: https://phabricator.services.mozilla.com/D184457